--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,48 +1,75 @@
-html,body
-{
-	width:100%;
-	height:100%;
-
-  	background-color:#222;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    background-color: #DDD;
 }
 
-.content
-{
-	width:100%;
-	height:100%;
+.content {
+    width: 100%;
+    height: 100%;
 }
+
 
 /* stage -- start */
-.stage
-{
-	position:relative;
 
-	width:100%;
-	height:680px;
+.stage {
+    position: relative;
+    width: 100%;
+    height: 680px;
 }
+
+
 /* stage -- end */
 
+
 /* image --start */
-.img-sec
-{
-	position:relatvie;
 
-	width:100%;
-	height:100%;
-	overflown:hidden;
+.img-sec {
 
-	background-color:#ddd;
+    background-color: #ddd;
+
+    perspective: 1800px;
+    position: relatvie;
+    width: 100%;
+    height: 100%;
+    overflown: hidden;
+
+    @at-root {
+        .img-figure {
+            position:absolute;
+
+            width: 320px;
+            height: 360px;
+            margin: 0;
+            padding: 40px;
+            box-sizing: border-box;
+            background-color:#fff;
+        }
+        figcaption {
+            text-align: center;
+            .img-title {
+                margin: 20px 0 0 0;
+                color: #a7a0a2;
+                font-size: 16px;
+            }
+        }
+    }
 }
+
+
 /* image --end */
 
-/* controller -- start */
-.controller-nav
-{
-	position:absolute;
-	left:0;
-	bottom:30px;
-	z-index:101;
 
-	width:100%;
+/* controller -- start */
+
+.controller-nav {
+    position: absolute;
+    left: 0;
+    bottom: 30px;
+    z-index: 101;
+    width: 100%;
 }
+
+
 /* controller --end */
