--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,8 @@ body {
     width: 100%;
     height: 100%;
     background-color: #DDD;
+   overflow-x:hidden;
+   overflow-y:hidden;
 }
 
 .content {
@@ -41,6 +43,13 @@ body {
             padding: 40px;
             box-sizing: border-box;
             background-color: #fff;
+             cursor:pointer;
+           transform-origin: 0 50% 0;
+           transform-style: preserve-3d;
+            &.is-inverse
+            {
+                transform:translate(320px) rotateY(180deg);
+            }
         }
         figcaption {
             text-align: center;
@@ -49,7 +58,34 @@ body {
                 color: #a7a0a2;
                 font-size: 16px;
             }
+
+            .img-back
+            {
+
+              position: absolute;
+              top: 0;
+              left: 0;
+
+              width: 100%;
+              height: 100%;
+              padding: 50px 40px;
+              overflow: auto;
+
+              color: #a7a0a2;
+              font-size: 22px;
+              line-height: 1.25;
+              text-align: left;
+
+              background-color: #fff;
+
+              box-sizing: border-box;
+              transform: rotateY(180deg) translateZ(1px);
+              backface-visibility: hidden;
+
+            }
         }
+
+
     }
 }
 
