--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,8 +3,8 @@ body {
     width: 100%;
     height: 100%;
     background-color: #DDD;
-   overflow-x:hidden;
-   overflow-y:hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .content {
@@ -43,12 +43,11 @@ body {
             padding: 40px;
             box-sizing: border-box;
             background-color: #fff;
-             cursor:pointer;
-           transform-origin: 0 50% 0;
-           transform-style: preserve-3d;
-            &.is-inverse
-            {
-                transform:translate(320px) rotateY(180deg);
+            cursor: pointer;
+            transform-origin: 0 50% 0;
+            transform-style: preserve-3d;
+            &.is-inverse {
+                transform: translate(320px) rotateY(180deg);
             }
         }
         figcaption {
@@ -58,34 +57,24 @@ body {
                 color: #a7a0a2;
                 font-size: 16px;
             }
-
-            .img-back
-            {
-
-              position: absolute;
-              top: 0;
-              left: 0;
-
-              width: 100%;
-              height: 100%;
-              padding: 50px 40px;
-              overflow: auto;
-
-              color: #a7a0a2;
-              font-size: 22px;
-              line-height: 1.25;
-              text-align: left;
-
-              background-color: #fff;
-
-              box-sizing: border-box;
-              transform: rotateY(180deg) translateZ(1px);
-              backface-visibility: hidden;
-
+            .img-back {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                padding: 50px 40px;
+                overflow: auto;
+                color: #a7a0a2;
+                font-size: 22px;
+                line-height: 1.25;
+                text-align: left;
+                background-color: #fff;
+                box-sizing: border-box;
+                transform: rotateY(180deg) translateZ(1px);
+                backface-visibility: hidden;
             }
         }
-
-
     }
 }
 
@@ -95,12 +84,31 @@ body {
 
 /* controller -- start */
 
-.controller-nav {
+.controller_nav {
     position: absolute;
     left: 0;
     bottom: 30px;
     z-index: 101;
+
     width: 100%;
+
+    text-align: center;
+   @at-root {
+        .control-unit {
+           display:inline-block;
+           width:30px;
+           height:30px;
+           margin:0 5px;
+
+           text-align:center;
+           vertical-align:middle;
+
+           cursor:pointer;
+           background-color:#aaa;
+
+           border-radius:50px;
+        }
+    } 
 }
 
 
