--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,10 +1,14 @@
+@font-face {
+    font-family: "icons-turn-arrow";
+    src: url("../fonts/icons/turn-arrow.woff") format("woff"), url("../fonts/icons/turn-arrow.svg") format("svg");
+}
+
 html,
 body {
     width: 100%;
     height: 100%;
     background-color: #DDD;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .content {
@@ -18,7 +22,7 @@ body {
 .stage {
     position: relative;
     width: 100%;
-    height: 680px;
+    height: 100%;
 }
 
 
@@ -28,12 +32,12 @@ body {
 /* image --start */
 
 .img-sec {
+    position: relative;
     background-color: #ddd;
-    perspective: 1800px;
-    position: relatvie;
     width: 100%;
     height: 100%;
-    overflown: hidden;
+    overflow: hidden;
+    /* perspective: 1800px; */
     @at-root {
         .img-figure {
             position: absolute;
@@ -46,6 +50,7 @@ body {
             cursor: pointer;
             transform-origin: 0 50% 0;
             transform-style: preserve-3d;
+            transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
             &.is-inverse {
                 transform: translate(320px) rotateY(180deg);
             }
@@ -73,6 +78,9 @@ body {
                 box-sizing: border-box;
                 transform: rotateY(180deg) translateZ(1px);
                 backface-visibility: hidden;
+                p {
+                    margin: 0;
+                }
             }
         }
     }
@@ -89,26 +97,39 @@ body {
     left: 0;
     bottom: 30px;
     z-index: 101;
-
     width: 100%;
-
     text-align: center;
-   @at-root {
+    @at-root {
         .control-unit {
-           display:inline-block;
-           width:30px;
-           height:30px;
-           margin:0 5px;
-
-           text-align:center;
-           vertical-align:middle;
-
-           cursor:pointer;
-           background-color:#aaa;
-
-           border-radius:50px;
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            margin: 0 5px;
+            text-align: center;
+            vertical-align: middle;
+            cursor: pointer;
+            background-color: #aaa;
+            border-radius: 50px;
+            transform: scale(.5);
+            transition:transform .5s ease-in-out,background-color .5s ease-in-out;
+            &.is-center {
+                background-color: #888;
+                transform: scale(1);
+                &::after {
+                    color: #fff;
+                    font-family: "icons-turn-arrow";
+                    font-size: 80%;
+                    line-height: 30px;
+                    content: '\e600';
+                    -webkit-font-smoothing: antialiased;
+                }
+                &.is-inverse {
+                background-color:#555;
+                    transform: rotateY(180deg);
+                }
+            }
         }
-    } 
+    }
 }
 
 
