--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "icons-turn-arrow";
-    src: url("../fonts/icons/turn-arrow.woff") format("woff"), url("../fonts/icons/turn-arrow.svg") format("svg");
+    src: url("/fonts/icons/turn-arrow.woff") format("woff"), url("/fonts/icons/turn-arrow.svg") format("svg");
 }
 
 html,
